# warp-shuttle-test

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: auth.rs  error.rs  lib.rs  routes.rs  user.rs
entity/src/: user.rs
migration/src/: lib.rs  m20240225_163138_create_user.rs
src/: main.rs
