[package]
name = "warp-shuttle-test"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "api", "entity", "migration", "model"]

[dependencies]
anyhow = "1.0.80"
parking_lot = "0.12.1"
sea-orm = { version = "0.12.14", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
serde = "1.0.197"
serde_json = "1.0.114"
shuttle-runtime = "0.44.0"
shuttle-shared-db = { version = "0.44.0", features = ["postgres"] }
shuttle-warp = "0.44.0"
tokio = "1.26.0"
warp = "0.3.7"
entity = { path = "entity" }
migration = { path = "migration" }
api = { path = "api" }
model = { path = "model" }
argon2 = "0.5.3"
jsonwebtoken = "9.2.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
