[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.3"
tokio = "1.26.0"
serde = "1.0.197"
serde_json = "1.0.114"
sea-orm = { version = "0.12.14", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
parking_lot = "0.12.1"
anyhow = "1.0.80"
model = { path = "../model" }
entity = { path = "../entity" }
